@@ -1,5 +1,11 @@
 2003-01-31  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03713] search with "$"
+	* search.c (forwardSearch): check l->next && l->next->bpos
+		(backwardSearch): check l->size, l->next && l->next->bpos
+
+2003-01-31  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03712] buf fix of LINE_INFO
 	* main.c (curlno): rewrite
 
@@ -6952,4 +6958,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.726 2003/01/30 16:18:29 ukai Exp $
+$Id: ChangeLog,v 1.727 2003/01/30 16:26:15 ukai Exp $
